     `interruptsize` and `interruptonly`, are considered before we first try
     to open the USB device handle. [#1575, #1512]
   * In `cps_fix_report_desc()` we intended to fix-up input and output voltages
     in certain cases against high voltage transfer, we only fixed-up one of
     them. [#1245]

 - SEMVER, know thyself!
   * development iterations of NUT should now identify with not only the
     semantic version of a preceding release, but with git-derived information
     about the amount of iterations that followed (if available):
     the three-number "semver" would be seen on release snapshots, while
     other builds would expose the added components: one with the amount
     of commits on the main development trunk since the preceding release
     which are ancestors of the built code base, and in case of feature
     development branches -- another component with the amount of commits
     unique to this branch (which are not part of the development trunk yet).
     This allows to produce more relevant (monotonously growing) version
     identifiers for packages and similar artifacts, with more meaningful
     upgrades via development snapshots, eventually. A copy of the current
     version information would be embedded into "dist" archives as a
     `VERSION_DEFAULT` file, among provisions for packager tuning. [#1949]
   * SMF manifests and systemd units now refer to man pages and their online
     variants under `NUT_WEBSITE_BASE` dependent on codebase maturity
     (development or release snapshot); many programs now display such
     references in their command-line usage help, method `suggest_doc_links()`
     was introduced for this purpose. [issue #722, PR #2733]

 - A technologically and practically interesting revamp of NUT mesh of
   link:https://www.gnu.org/software/automake/[automake] (`Makefile.am`)
   recipes was completed, allowing for a more parallelizable build routine