@@ -98,7 +98,7 @@ USER_MANUAL_DEPS = acknowledgements.txt cables.txt config-notes.txt	\
 DEVELOPER_GUIDE_DEPS = contact-closure.txt design.txt developers.txt	\
  developer-guide.txt hid-subdrivers.txt macros.txt new-clients.txt	\
  new-drivers.txt net-protocol.txt nutdrv_qx-subdrivers.txt	\
- snmp-subdrivers.txt sock-protocol.txt
+ nut-versioning.adoc snmp-subdrivers.txt sock-protocol.txt
 
 CABLES_DEPS = cables/apc-rs500-serial.txt	\
  cables/apc.txt cables/ge-imv-victron.txt cables/imv.txt		\
