@@ -1,0 +1,92 @@
+NUT versioning
+==============
+
+Historic note
+-------------
+
+Historically, the Network UPS Tools project release and interim iterations
+code base versions were identified by three or four numeric components,
+roughly following the Semantic Versioning (SEMVER) traditions, later
+codified as a formal standard at link:https://semver.org/[semver.org]:
+
+* NUT uses the GNU autotools suite for recipe orchestration, and the version
+  string is specified in the `configure.ac` file an `AC_INIT` macro, which
+  further generates variables like `PACKAGE_VERSION`, `PACKAGE_URL` and others
+  used (substituted) in the actual code base, often via `nut_version.h` file.
+* NUT releases were identified by a `MAJOR.MINOR.PATCH` triplet, which
+  was not strictly following the standard in that while the "major" part
+  did reflect architectural/design changes, and "minor" part reflected some
+  significant development milestones or API changes, the "patch" part did
+  not correspond to post-release fixes but reflected iterative development,
+  of which releases were the better-reviewed snapshots. Such a triplet was
+  only spelled in `AC_INIT` for the commit tagged as that release.
+* NUT development versions were specified by the next commit after a
+  release was published, spelling an `AC_INIT` macro argument like
+  `MAJOR.MINOR.PATCH.1` to provide a fourth component -- which is
+  logically "greater than" `MAJOR.MINOR.PATCH` for comparisons, so that
+  the developed version can formally be installed over a preceding
+  release (e.g. from custom testing packages).
+
+This configuration with a single development version (`.1`) was not very
+helpful for the faster pace of iterations, especially as the Git workflow
+and pull requests were adopted as the way of iterating the NUT development.
+This did not really help identify the build being tested by CI or reported
+by a community member, nor quickly determine if one custom build is "newer"
+than another (e.g. can be a recommended upgrade from the previously installed
+snapshot to check if some bug was fixed).
+
+Some experiments were done adding the `git describe` output to version
+banners reported by programs. These provide the number of commits since
+the most-recent known git tag, as well as the git hash of the NUT sources
+involved. This made the builds better identifiable, but did not help
+compare the feature branches and the main trunk of development: any code
+committed after a release has its own count of commits since that tag,
+this one number does not really suffice.
+
+Current NUT SEMVER definition
+-----------------------------
+
+Since NUT v2.8.3, the definition which goes into `AC_INIT` and further into
+the code was extended in a manner similar to what `git describe` produces,
+but with added numbers after the common triplet of semantically versioned
+numbers: `X.Y.Z(.T(.B(-C+gHASH)))`
+
+* Standard semver (used in releases):
++
+NOTE: Historically NUT did not *diligently* follow the standard semver triplet,
+primarily because a snapshot of trunk is tested and released, and work
+moves on with the PATCH part (rarely MINOR one) incremented; no actual
+patches are released to some sustaining track of an older release lineage.
+There were large re-designs that got MAJOR up to 2, though.
+
+  - `X`: MAJOR - incompatible API changes
+  - `Y`: MINOR - major new features and/or API evolution
+  - `Z`: PATCH - bug fixes (and new features like added drivers)
+* Extended semver (for snapshots of trunk):
+  - T: (optional) Commits on trunk since previous release tag
+* Extended semver (for features branched off trunk):
+  - B: (optional) Commits on branch since nearest ancestor which is on trunk
+
+The optional suffix (only for commits which are not git tags themselves)
+is provided by `git describe`:
+
+* C: Commits on branch since previous release tag
+* H: Git hash (prefixed by `g` character) of the described commit
+
+The numeric part of NUT SEMVER definition mostly follows https://semver.org/
+except that for development iterations the base version may have up to
+five dot-separated numeric components (SEMVER triplet for base release,
+and additional data described above). Unlike standard semver provisions
+for "pre-release versions" (separated by a minus sign after the triplet),
+which are "less than" that release for comparisons, the fourth and fifth
+components (if present) are "greater than" that release and any preceding
+development iterations made after it.
+
+Helper script `tools/gitlog2version.sh` is used to determine the project
+version from packager-provided override files (or equivalents provided by
+`make dist` in a snapshot/release tarball), git metadata from the current
+workspace, or built-in fallback defaults.
+
+Occasionally there may be tagged pre-releases, which follow the standard
+semver markup, like `v2.8.0-rc3` (in git), however they would be converted
+to NUT SEMVER here (as a number of commits since previous release) by default.
