@@ -1,4 +1,4 @@
-personal_ws-1.1 en 3333 utf-8
+personal_ws-1.1 en 3334 utf-8
 AAC
 AAS
 ABI
@@ -2026,6 +2026,7 @@ github
 gitignore
 gitk
 gitlab
+gitlog
 gmail
 gmake
 gmtime
